2009-06-16  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_init),
	(hildon_pannable_area_realize): Replaced old code adding flags in
	the object init, now we add it with the other flags in the realize
	method.

2009-06-16  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-note.c: (hildon_note_class_init): Several
	documentation improvements to the HildonNote widget.

2009-06-16  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-note.h: Document the HildonNoteType enumeration.

	Fixes: MB#4556 (HildonNoteType is undocumented)

2009-06-15  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-picker-button.c:
	Explain how HildonPickerButton sets the title of its dialog

	Fixes: MB#4528 (HildonPickerButton docs should mention how to set
	the title of its dialog)

2009-06-15  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-check-button.c:
	Documentation updates

	Fixes: MB#4598 (HildonCheckButton documentation doesn't say why it
	exists)

2009-06-15  Alberto Garcia  <agarcia@igalia.com>

	* hildon/Makefile.am
	* hildon/hildon-edit-toolbar-private.h
	* hildon/hildon-edit-toolbar.c
	(+hildon_edit_toolbar_set_progress_indicator)
	(hildon_edit_toolbar_init): Add progress indicator to the
	toolbar.

	* hildon/hildon-gtk.c
	(hildon_gtk_window_set_progress_indicator):
	If the window contains a HildonEditToolbar, enable the progress
	indicator there too.

	* hildon/hildon-private.h
	* hildon/hildon-private.c
	(+hildon_private_create_animation)
	* hildon/hildon-banner.c
	(-hildon_banner_create_animation):
	Moved to hildon-private.c

	Fixes: NB#102373 (Progress indicator also for the Edit mode
	toolbar)

2009-06-15  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-app-menu-private.h
	* hildon/hildon-app-menu.c (hildon_app_menu_insert)
	(hildon_app_menu_add_filter, +menu_item_button_event)
	(hildon_app_menu_button_release, hildon_app_menu_init):